[build-system]
requires = [ "setuptools>=41.0.1",]
build-backend = "setuptools.build_meta"

[tool.xcookie]
tags = [ "gitlab", "kitware", "purepy", "cv2", "gdal", "postgresql"]
mod_name = "kwcoco"
repo_name = "kwcoco"
rel_mod_parent_dpath = "."
min_python = '3.8'
url = "https://gitlab.kitware.com/computer-vision/kwcoco"
ci_cpython_versions = ["3.8", "3.9", "3.10", "3.11", "3.12", "3.13"]
extra_full_strict_lines = [
    "pip install GDAL==3.3.1 --find-links https://girder.github.io/large_image_wheels -U",
]
extra_full_loose_lines = [
    "pip install GDAL>=3.3.1 --find-links https://girder.github.io/large_image_wheels -U",
]
author = "Jon Crall"
author_email = "jon.crall@kitware.com"
license = "Apache 2"
description = "The kwcoco module and cli for image datasets"
dev_status = "beta"
typed = true
render_doc_images = 1

[tool.xcookie.entry_points]
# the console_scripts entry point creates the xdoctest executable
console_scripts = [
    "kwcoco = kwcoco.cli.__main__:main",
]

[tool.pytest.ini_options]
addopts = "-p no:doctest --xdoctest --xdoctest-style=google --ignore-glob=setup.py"
norecursedirs = ".git ignore build __pycache__ dev _skbuild docs examples"
filterwarnings = [
 "default",
 "ignore:.*No cfgstr given in Cacher constructor or call.*:Warning",
 "ignore:.*Define the __nice__ method for.*:Warning",
 "ignore:.*private pytest class or function.*:Warning",
]

[tool.coverage.run]
branch = true

[tool.coverage.report]
exclude_lines = [
 "pragma: no cover",
 ".*  # pragma: no cover",
 ".*  # nocover",
 "def __repr__",
 "raise AssertionError",
 "raise NotImplementedError",
 "if 0:",
 "if trace is not None",
 "verbose = .*",
 "^ *raise",
 "^ *pass *$",
 "if _debug:",
 "if __name__ == .__main__.:",
 ".*if six.PY2:",
]
omit = [ "kwcoco/__main__.py", "*/setup.py",]

[tool.mypy]
ignore_missing_imports = true

[tool.codespell]
skip = ['./docs/build', './*.egg-info', './build', './htmlcov']
count = true
quiet-level = 3
ignore-words-list = ["fpr", 'ANS', 'ans', 'numer', 'wont', 'cant', 'ANS', 'doesnt', 'arent', 'ans', 'thats', 'datas', 'isnt', 'nd', 'bu', 'hasnt', 'didnt']
